--- a/OpenAITinker/OpenAITinker.csproj
+++ b/OpenAITinker/OpenAITinker.csproj
@@ -8,6 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="DemoContent.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="DemoContent.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.2" PrivateAssets="all" />
     <PackageReference Include="Plotly.Blazor" Version="2.18.0" />
