Update embeddings demo. Add some more AceEditor stuff

--- a/OpenAITinker/wwwroot/appsettings.json
+++ b/OpenAITinker/wwwroot/appsettings.json
@@ -1,6 +1,6 @@
 {
   "OpenAIDotNetServiceOptions": {
-    "ApiKey": "<YOUR OPENAI API KEY>",
-    "Organization": "<YOUR ORG>"
+    "ApiKey": "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",
+    "Organization": "org-vzjblyRugVShXOXHAgmIRTuQ"
   }
 }
